[package]
edition = "2018"
version = "0.1.0"
name = "tokio-mini-redis"
readme = "README.md"
description = """
An incomplete implementation of a Rust client and server. Used as a
larger example of an idiomatic Tokio application.
"""

[[bin]]
name = "mini-redis-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "mini-redis-server"
path = "src/bin/server.rs"

[dependencies]
atoi = "0.3.2"
bytes = "1"
log = "0.4"
structopt = "0.3.14"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
# Enable test-utilities in dev mode only. This is mostly for tests.
tokio = { version = "1", features = ["test-util"] }
